--- a/style.css
+++ b/style.css
@@ -1,29 +1,79 @@
+body {
+    font-family: 'Montserrat', sans-serif;
+    color: #FFFFFF;
+    text-align: justify
+}
+.navbar{
+    background: rgb(96, 125, 139, 0.97);
+    border: none;
+}
+.navbar-default .navbar-nav>li>a{
+    color: #FFFFFF;
+}
+.navbar-default .navbar-nav>li>a:hover{
+    color:#BDBDBD;
+    border-bottom-color:#BDBDBD;
+}
+.navbar-default .navbar-brand {
+    color:#FFFFFF;
+}
+.experience {
+   padding-top: 25px ;
+}
+.list-group-item{
+    background: #009688;
+}
 
 
-header{
-    padding-top: 100px;
+.img-header {
+    border:none;
 }
 
 .section{
     min-height: 1000px;
     overflow: hidden;
     position: 'relativ';
-    padding: 80px 10px 0px;
+    padding: 150px 10px 0px;
 }
 .section:nth-child(even){
-    background-color: #ccc;
+    background: #009688;
+    
+}
+.section:nth-child(odd){
+    background: #607D8B;
+    
 }
 #aboutMe p{
     padding: 10px;
 
 }
-#home{
-    background: url(http://lorempixel.com/output/abstract-q-g-1920-1075-4.jpg) no-repeat center center fixed;
-    background-size: cover;
+#contact{
+    text-align: center;
+    font-size: 20px;
+    
 }
-#home div{
-    padding: 10px;
-    background-color: rgba(206, 148, 94, 0.61);
+
+.ico{
+    color: #FFFFFF;
+    font-size: 35px;
+    margin-bottom: 25px;
+}
+a:link,a:visited{
+    color: #FFFFFF;
+}
+#contact-elements {
+    margin-top: 20%;
+    
+}
+.contact-element{
+    margin-bottom: 25px; 
+    height: 200px;
+    padding: 50px 10px 10px 10px;
+    border: 1px solid #FFFFFF;
+    border-radius: 20px;
+}
+#home{
+   font-size: 18px;
 }
 #projects .col-sm-6 p{
     line-height: 50px;
