--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Montserrat', sans-serif;
     color: #FFFFFF;
-    text-align: justify
+    
 }
 .navbar{
     background: rgb(96, 125, 139, 0.97);
@@ -18,7 +18,7 @@ body {
     color:#FFFFFF;
 }
 .experience {
-   padding-top: 25px ;
+   padding-top: 25px;
 }
 .list-group-item{
     background: #009688;
@@ -27,30 +27,30 @@ body {
 
 .img-header {
     border:none;
+    margin-top: 15px;
 }
 
 .section{
     min-height: 1000px;
     overflow: hidden;
     position: 'relativ';
-    padding: 150px 10px 0px;
+    padding: 100px 10px 0px;
 }
 .section:nth-child(even){
-    background: #009688;
-    
+    background: #009688;    
 }
 .section:nth-child(odd){
     background: #607D8B;
-    
 }
 #aboutMe p{
     padding: 10px;
+    font-size: 16px;
+    text-align: justify
 
 }
 #contact{
     text-align: center;
     font-size: 20px;
-    
 }
 
 .ico{
@@ -62,13 +62,25 @@ a:link,a:visited{
     color: #FFFFFF;
 }
 #contact-elements {
-    margin-top: 20%;
+    margin-top: 15%;
+    
+}
+#contact-element:hover {
+   color:black;
     
 }
 .contact-element{
     margin-bottom: 25px; 
     height: 200px;
     padding: 50px 10px 10px 10px;
+    border: 1px solid #FFFFFF;
+    border-radius: 20px;
+}
+.contact-element:hover{
+    background: #607D8B
+    
+}
+.about-card{
     border: 1px solid #FFFFFF;
     border-radius: 20px;
 }
