--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@ body {
 
 .img-header {
     border:none;
-    margin-top: 15px;
+    margin: 20px 0 20px 0px;
+   
 }
 
 .section{
@@ -73,7 +74,7 @@ a:link,a:visited{
     margin-bottom: 25px; 
     height: 200px;
     padding: 50px 10px 10px 10px;
-    border: 1px solid #FFFFFF;
+    border: 1px solid #BDBDBD;
     border-radius: 20px;
 }
 .contact-element:hover{
@@ -81,7 +82,7 @@ a:link,a:visited{
     
 }
 .about-card{
-    border: 1px solid #FFFFFF;
+    border: 1px solid #BDBDBD;
     border-radius: 20px;
 }
 #home{
@@ -95,12 +96,5 @@ li :hover {
     
 }
 
-#parallelogram {
-	width: 150px;
-	height: 100px;
-	-webkit-transform: skew(20deg);
-	   -moz-transform: skew(20deg);
-	     -o-transform: skew(20deg);
-	background: red;
-}
+
 
