--- a/style.css
+++ b/style.css
@@ -1,90 +1,157 @@
+
 body {
     font-family: 'Montserrat', sans-serif;
-    color: #FFFFFF;
+    color: #009688;
     
 }
+.jumbotron { 
+    height: 1000px;
+    background: url('jumbo-img.jpg');
+    background-position: center;
+    background-size:cover;
+    margin-bottom: 0;
+  }
+  
 .navbar{
-    background: rgb(96, 125, 139, 0.97);
+    background:#212121;
     border: none;
 }
-.navbar-default .navbar-nav>li>a{
-    color: #FFFFFF;
+.navbar-dark .navbar-nav .nav-link{
+    color:#FFFFFF;
+}
+a.nav-link:hover{
+    border-bottom: 2px solid #009688;
+}
+
+/* .navbar-default .navbar-nav>li>a{
+    color: #009688;
 }
 .navbar-default .navbar-nav>li>a:hover{
-    color:#BDBDBD;
+    color:#009688;
     border-bottom-color:#BDBDBD;
 }
 .navbar-default .navbar-brand {
-    color:#FFFFFF;
-}
-.experience {
-   padding-top: 25px;
-}
-.list-group-item{
-    background: #009688;
-}
+    color:#009688;
+} */
 
-
-.img-header {
+#img-header {
     border:none;
-    margin: 20px 0 20px 0px;
+    margin-bottom: 10px;
+
+}
+#img-self {
+    
+    border:none;
+    margin-bottom: 10px;
+    border-radius: 3px;
+    position: relative;
+}
+.caption{
+    color: #ffffff;
+    font-weight: 200;
+    font-size: 18px;
+    position: absolute;
+    left: 6%;
+    top: 40%;
+    width: 88%;
+
+}
+.caption p{
+    background:rgb(33, 33, 33,0.1);
+    width:fit-content;
+}
+
+#aboutMe{
    
+
+}
+#about-card{
+    color: #009688;
+    font-size: 16px;
+    text-align: justify;
+    /* border: 1px solid #BDBDBD; */
+    border-radius: 20px;
+    /* background:#607D8B; */
+}
+#about-card p {
+}
+#experience-card {
+   padding: 25px 10px 25px 20px;
+   background: rgb(33, 33, 33);
+   border-radius:  3px;
+   margin-bottom: 20px;
+}
+#school-card {
+   padding: 25px 10px 25px 20px;
+   background: #212121;
+   border-radius:  3px;
+   margin-bottom: 20px;
+   
+}
+#skillsAttr{
+    
+    margin-bottom: 0px;
+}
+#skillsAttr-card{
+    color: #009688;
+    padding: 25px 10px 25px 20px;
+    /* background: #607D8B;
+    border-radius: 20px; */
+}
+#skills{
+   
+    /* background: rgb(189, 189, 189,0.2); */
+}
+
+.list-group-item{
+    background: none;
+    border: none;
 }
 
 .section{
     min-height: 1000px;
     overflow: hidden;
     position: 'relativ';
-    padding: 100px 10px 0px;
+    padding: 10% 10px 0px;
 }
 .section:nth-child(even){
-    background: #009688;    
+    background-image: url("bg_img.jpg");
+    height: 100%;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .section:nth-child(odd){
-    background: #607D8B;
+    background: #212121; 
+    
 }
-#aboutMe p{
-    padding: 10px;
-    font-size: 16px;
-    text-align: justify
 
-}
 #contact{
     text-align: center;
     font-size: 20px;
+    color:#009688;
 }
 
-.ico{
-    color: #FFFFFF;
-    font-size: 35px;
-    margin-bottom: 25px;
+#contact-elements{
+    margin: 30px 0 0 0;
+}
+
+.contact-ico{
+    color:#009688;
+    font-size: 25px;
+    margin: 0px 5px 0px 5px;
 }
 a:link,a:visited{
-    color: #FFFFFF;
+    color:#009688;;
 }
-#contact-elements {
-    margin-top: 15%;
-    
-}
+
 #contact-element:hover {
    color:black;
     
 }
-.contact-element{
-    margin-bottom: 25px; 
-    height: 200px;
-    padding: 50px 10px 10px 10px;
-    border: 1px solid #BDBDBD;
-    border-radius: 20px;
-}
-.contact-element:hover{
-    background: #607D8B
-    
-}
-.about-card{
-    border: 1px solid #BDBDBD;
-    border-radius: 20px;
-}
+
+
 #home{
    font-size: 18px;
 }
@@ -95,6 +162,17 @@ li :hover {
     border-bottom: 2px solid rgb(91, 138, 82);
     
 }
+footer{
+    padding: 20px 0 0 0 ; 
+    color: #FFFFFF;
+    background: #000000;
+}
+.footer-ico{
+    color: #FAFAFA;
+    font-size: 25px;
+    margin: 0px 5px 0px 5px;
+}
+
 
 
 
