--- a/css/style.css
+++ b/css/style.css
@@ -6,18 +6,30 @@ body {
 }
 .jumbotron { 
     height: 1000px;
-    background: url('jumbo-img.jpg');
+    background: url("/img/jumbo-img.jpg");
     background-position: center;
     background-size:cover;
     margin-bottom: 0;
   }
-  
+.jumbo-caption{
+    font-weight: 900;
+    background:rgb(0,0,0,0.05);
+    width: fit-content;
+    color: #212121;
+}
 .navbar{
-    background:#212121;
+    background:rgb(33, 33, 33);
     border: none;
 }
 .navbar-dark .navbar-nav .nav-link{
     color:#FFFFFF;
+    background:none;
+}
+.navbar navbar-expand-lg justify-content-end{
+    background: none;
+}
+a.nav-link{
+    background: none;
 }
 a.nav-link:hover{
     border-bottom: 2px solid #009688;
@@ -77,16 +89,16 @@ a.nav-link:hover{
 }
 #experience-card {
    padding: 25px 10px 25px 20px;
-   background: rgb(33, 33, 33);
+   background: rgb(33, 33, 33,0.9);
    border-radius:  3px;
    margin-bottom: 20px;
 }
 #school-card {
    padding: 25px 10px 25px 20px;
-   background: #212121;
+   background: rgb(33, 33, 33,0.9);
    border-radius:  3px;
    margin-bottom: 20px;
-   
+   height: fit-content;
 }
 #skillsAttr{
     
@@ -115,7 +127,7 @@ a.nav-link:hover{
     padding: 10% 10px 0px;
 }
 .section:nth-child(even){
-    background-image: url("bg_img.jpg");
+    background-image: url("/img/bg_img.jpg");
     height: 100%;
     background-attachment: fixed;
     background-position: center;
@@ -134,7 +146,7 @@ a.nav-link:hover{
 }
 
 #contact-elements{
-    margin: 30px 0 0 0;
+    margin: 100px 0 0 0;
 }
 
 .contact-ico{
