--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 }
 .jumbotron { 
     height: 1000px;
-    background: url("/img/jumbo-img.jpg");
+    background: url("../img/jumbo-img.jpg");
     background-position: center;
     background-size:cover;
     margin-bottom: 0;
