--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
     margin-bottom: 0;
   }
 .jumbo-caption{
+    padding-top:60px;
     font-weight: 900;
     background:rgb(0,0,0,0.01);
     text-shadow:2px 2px 2px #FAFAFA;
