--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,11 @@ body {
     background-size:cover;
     margin-bottom: 0;
   }
+  #hero-text{
+    margin-top:60px;
+  }
 .jumbo-caption{
-    padding-top:60px;
+    
     font-weight: 900;
     background:rgb(0,0,0,0.01);
     text-shadow:2px 2px 2px #FAFAFA;
