--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ padding-top: 120px;
 }
 #about-card{
     color: #009688;
-    font-size: 16px;
+    font-size: 18px;
     text-align: justify;
     /* border: 1px solid #BDBDBD; */
     border-radius: 20px;
@@ -123,6 +123,9 @@ padding-top: 120px;
 }
 #projects .col-sm-6 p{
     line-height: 50px;
+}
+#projects-card{
+    margin-top: 50px;
 }
 .project{
     padding: 0 7px 14px 7px ;
@@ -202,4 +205,13 @@ footer{
     margin: 0px 5px 0px 5px;
 }
 
-
+@media only screen and (max-width: 600px) {
+    #about-card{
+        color: #009688;
+        font-size: 18px;
+        text-align: left;
+        /* border: 1px solid #BDBDBD; */
+        border-radius: 20px;
+        /* background:#607D8B; */
+    }
+}
